syntax = "proto3";

option go_package = "poc_grpc/proto";

service NotebookService {
    rpc CreateNotebook(CreateNotebookRequest) returns (CreateNotebookResponse) {};
}

message Notebook {
    string id = 1;
    string name = 2;
    string marca = 3;
    string modelo = 4;
    int64 numeroSerie = 5;
}

message CreateNotebookRequest {
    string name = 1;
    string marca = 2;
    string modelo = 3;
    int64 numeroSerie = 4;
}

message CreateNotebookResponse {
    Notebook notebook = 1;
}
